# boids

./: Cargo.toml  LICENSE_MIT  README.md  flake.nix
boids-server/: Cargo.toml  build.rs
boids-server/src/: main.rs
docs/: index.html  style.css
docs/wasm/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
frontend/src/: boids.rs  lib.rs
src/: boid.rs  boids.rs  debug.rs  lib.rs  model.rs  utils.rs
static/: script.js
static/wasm/: README.md  wasm.js
