[package]
name = "boids"
version = "0.1.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.48"
wasm-bindgen = "0.2.63"
nalgebra = "0.25.1"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
yew = "0.17.3"
log = "0.4.14"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "History",
  "Window",
  "Performance",
  "console",
  "Url",
  "UrlSearchParams",
]
