[package]
name = "boids-server"
version = "0.1.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["serve"]
